# gb-emu

./: .gitignore  CMakeLists.txt  main.c
apu/: apu.c  apu.h
bus/: bus.c  bus.h
cartridge/: cartridge.c  cartridge.h
common/: bitwise.h  datatypes.h  log.h
cpu/: cpu.c  cpu.h  helper.c  helper.h  instructions.c  instructions.h
emulator/: emulator.c  emulator.h
gui/: gui.h  input.c  input.h  renderer.c  renderer.h
memory/: memory.c  memory.h
ppu/: ppu.c  ppu.h
